--- a/print.html
+++ b/print.html
@@ -76,7 +76,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">1.1.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">1.2.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html"><strong aria-hidden="true">1.3.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">1.4.</strong> ArchLinux终端配置</a></li></ol></li></ol>
+                <ol class="chapter"><li class="spacer"></li><li class="chapter-item expanded "><a href="ReadmeFirst.html"><strong aria-hidden="true">1.</strong> ArchLinux安装前必读</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="ArchLinux_Installation.html"><strong aria-hidden="true">1.1.</strong> ArchLinux安装</a></li><li class="chapter-item expanded "><a href="ArchLinux_Configuration.html"><strong aria-hidden="true">1.2.</strong> ArchLinux配置</a></li><li class="chapter-item expanded "><a href="ArchLinux_Beautify.html"><strong aria-hidden="true">1.3.</strong> ArchLinux桌面美化</a></li><li class="chapter-item expanded "><a href="ArchLinux_Terminal_configuration.html"><strong aria-hidden="true">1.4.</strong> ArchLinux终端配置</a></li><li class="spacer"></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -135,7 +135,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="从0开始安装archlinux"><a class="header" href="#从0开始安装archlinux">从0开始安装ArchLinux</a></h1>
+                        <div style="break-before: page; page-break-before: always;"></div><h1 id="从0开始安装archlinux"><a class="header" href="#从0开始安装archlinux">从0开始安装ArchLinux</a></h1>
 <p>请关注我的B站和YouTube</p>
 <p><a href="https://space.bilibili.com/151336873">B站</a></p>
 <p><a href="https://www.youtube.com/channel/UC7lDfWG9hE332i1zjSzzLxA">YouTube</a></p>
