--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <meta name="description" content="Description">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+        <link rel="stylesheet" href="css/vue.css">
     </head>
     <body>
         <div id="app">玩命加载中...</div>
@@ -17,7 +17,7 @@
             }
         </script>
         <!-- Docsify v4 -->
-        <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+        <script src="js/docsify.js"></script>
         <!-- 侧边栏 -->
         <script>
             window.$docsify = {
@@ -44,22 +44,9 @@
                 },
             };
         </script>
-        <!-- 字数统计 -->
-        <script src="//unpkg.com/docsify-count/dist/countable.js"></script>
-        <!-- 代码高亮 -->
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-php.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-java.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-java.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-python.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-python.min.js"></script>
         <!-- 复制到剪切板 -->
-        <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-        <!-- 放大图片 -->
-        <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-        <!-- 全文搜索 -->
-        <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
+        <script src="js/docsify-copy-code.js"></script>
         <!-- 内容导航 -->
-        <script src="//unpkg.com/docsify-plugin-toc"></script>
+        <script src="js/docsify-plugin-toc.js"></script>
     </body>
 </html>
