--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <meta name="description" content="Description">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-        <link rel="stylesheet" href="css/vue.css">
+        <link rel="stylesheet" href="css/docsify-themeable.css">
     </head>
     <body>
         <div id="app">玩命加载中...</div>
         <script>
             window.$docsify = {
                 name: '',
-                repo: ''
+                repo: '',
+                // Docsify tabs主题
+                tabs: {
+                    persist    : true,      // default
+                    sync       : true,      // default
+                    theme      : 'material', // default
+                    tabComments: true,      // default
+                    tabHeadings: true       // default
+                  }
             }
         </script>
         <!-- Docsify v4 -->
         <script src="js/docsify.js"></script>
+        <!-- Docsify Themeable主题 -->
+        <script src="js/docsify-themeable.js"></script>
         <!-- 侧边栏 -->
         <script>
             window.$docsify = {
@@ -48,5 +58,25 @@
         <script src="js/docsify-copy-code.js"></script>
         <!-- 内容导航 -->
         <script src="js/docsify-plugin-toc.js"></script>
+        <!-- 在GitHub上编辑 -->
+        <script src="js/docsify-edit-on-github.js"></script>
+        <!-- Docsify Tabs -->
+        <script src="js/docsify-tabs.js"></script>
+        <link rel="stylesheet" href="css/gitalk.css">
+        <script src="js/docsify-gitalk.js"></script>
+        <script src="js/gitalk.js"></script>
+        <script>
+        const gitalk = new Gitalk({
+            clientID: '2145ea87c946bdb131b9',
+            clientSecret: '380263d716d0cdd8d8dc5c4175ef5eb20625596c',
+            label: 'gitalk',
+            repo: 'senge-studio.github.io',
+            owner: 'senge-studio',
+            admin: ['senge-studio'],
+            language: 'zh_CN',
+            // facebook-like distraction free mode
+            distractionFreeMode: true
+        })
+        </script>
     </body>
 </html>
